Copyright (c) 2002-2008 Infrae. All rights reserved.
See also LICENSE.txt

Silva changes

  Silva 2.0.7 (unreleased)

    Bugs fixed:

      - silva_lookup_referer is stored in the session. If for some
        reason the session gets lost, that no longer results in an
        error.

      - 185422: Javascript prompt to save changes in kupu when
        leaving the editor wasn't working

      Ported from 1.6 branch:

      - Reversal of fix for issue
        https://bugs.launchpad.net/silva/+bug/101791 "Problem with
        Link object" since the issue was fixed in Zope 2.8+ itself,
        and then the bugfix turned out to break the link urls.

  Silva 2.0.6

    Bugs Fixed:

      - lookup_search conditionally converts username to unicode. The
        name could come from a form, or from code, we don't know
        which, so we have to code defensively. :(

      - KeyError in tab_status_export fixed

      - Links to local (i.e. not fully qualified) domain names are no
        longer incorrectly converted to relative urls in rendered
        SilvaDocuments.


  Silva 2.0.5

    Features Added:

      - 128518 Import of non existing values for (multi)list metadata
        values gave a formulator SelectionValidator error.

      - Since the full media export is restricted to Chief Editors and
        Managers, there's no reason to show the import or export
        buttons to lower level roles (since the pure xml import/export
        is deprecated).  Conditioned the buttons.

      - Made Silva work with ExtFile once again: we no longer
        configure the filesystem_path in the service_files, but leave
        it to the extfile.ini.

    Bugs Fixed:

      - Special characters in titles are escaped in the tocrenderer
        adapter, to play nice with xslt rendering.

      - Set overflow of selects in Kupu toolboxes to hidden,
        preventing long titles from pushing the toolbox wider.

      - Changed the threshold variable in upgrade.py from 500 to 50,